fixing clipping issue

--- a/public/main.scss
+++ b/public/main.scss
@@ -903,6 +903,7 @@ section {
 
 #contact-section {
 	height: 100.1vh !important;
+	width: 101%;
 	background: linear-gradient(to bottom, color(light-shade) 50%, color(dark-shade) 50%);
 	.bg-clipper {
 		height: 107%;
